--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,8 @@
                 </tr>
             </thead>
             <tbody>
-                <tr v-for="(item, index) in list" v-if="filterArray(item)">
+                <!--v-if="filterArray(item)"-->
+                <tr v-for="(item, index) in list">
                     <td>{{index + 1}}</td>
                     <td>{{item.number}}</td>
                     <td>{{item.date}}</td>
