--- a/app/index.html
+++ b/app/index.html
@@ -9,10 +9,13 @@
     <link href="css/style.css" rel="stylesheet">
     <script src="https://unpkg.com/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.4"></script>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
 </head>
 <body>
-    <div class="wrapper" id="app">
-        <div class="input-container">
+    <main class="wrapper" id="app">
+        <router-link to="/product">Go to Product</router-link>
+        <router-view></router-view>
+        <!--<div class="input-container">
             <input id="input-dresses" class="input" value="dresses" v-model="filter" type="radio" @click="page = 0">
             <label class="label" for="input-dresses">Dresses</label>
             <input id="input-skirts" class="input" value="skirts" v-model="filter" type="radio" @click="page = 0">
@@ -31,7 +34,6 @@
                 </tr>
             </thead>
             <tbody>
-                <!--v-if="filterArray(item)"-->
                 <tr v-for="(item, index) in list">
                     <td>{{index + 1}}</td>
                     <td>{{item.number}}</td>
@@ -60,8 +62,64 @@
                     v-bind:disabled="IsButtonRightDisabled"
                     @click="pageUp()"
                     type="button"> > </button>
+        </div>-->
+    </main>
+    <template id="index">
+        <div>
+            <div class="input-container">
+                <input id="input-dresses" class="input" value="dresses" v-model="filter" type="radio" @click="page = 0">
+                <label class="label" for="input-dresses">Dresses</label>
+                <input id="input-skirts" class="input" value="skirts" v-model="filter" type="radio" @click="page = 0">
+                <label class="label" for="input-skirts">Skirts</label>
+                <input id="input-tshirts" class="input" value="t-shirts" v-model="filter" type="radio" @click="page = 0">
+                <label class="label" for="input-tshirts">T-shirts</label>
+                <input id="input-shoes" class="input" value="shoes" v-model="filter" type="radio" @click="page = 0">
+                <label class="label" for="input-shoes">Shoes</label>
+                <input id="input-all" class="input" value="all" v-model="filter" type="radio" @click="page = 0">
+                <label class="label" for="input-all">All</label>
+            </div>
+            <table class="main-table" v-if="list">
+                <thead>
+                <tr>
+                    <th v-for="column in columns" @click="sortBy(column)">{{column}}</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr v-for="(item, index) in list">
+                    <td>{{index + 1}}</td>
+                    <td>{{item.number}}</td>
+                    <td>{{item.date}}</td>
+                    <td>{{item.category}}</td>
+                    <td>{{item.name}}</td>
+                    <td>{{item.quantity}}</td>
+                </tr>
+                </tbody>
+            </table>
+            <div class="input-container">
+                <button class="button button-left"
+                        v-bind:class="buttonLeftClass"
+                        v-bind:disabled="IsButtonLeftDisabled"
+                        @click="pageDown()"
+                        type="button"> < </button>
+                <p class="description">Show by:</p>
+                <input id="input-five" class="input" value="five" v-model="show" type="radio" @click="page = 0">
+                <label class="label" for="input-five">5</label>
+                <input id="input-ten" class="input" value="ten" v-model="show" type="radio" @click="page = 0">
+                <label class="label" for="input-ten">10</label>
+                <input id="input-show-all" class="input" value="all" v-model="show" type="radio" @click="page = 0">
+                <label class="label" for="input-show-all">All</label>
+                <button class="button button-right"
+                        v-bind:class="buttonRightClass"
+                        v-bind:disabled="IsButtonRightDisabled"
+                        @click="pageUp()"
+                        type="button"> > </button>
+            </div>
         </div>
-    </div>
+    </template>
+    <template id="product">
+        <div>Product!</div>
+    </template>
 <script src="scripts/script.js"></script>
+
 </body>
 </html>
