--- a/app/index.html
+++ b/app/index.html
@@ -74,20 +74,21 @@
     </template>
     <template id="product">
         <div>
-            Product {{ $route.params.id }}!
+            {{product.name}}
+            <div class="product-card clearfix">
+                <b-card no-block class="product-card__description">
+                    <b-tabs small card ref="tabs" v-model="tabIndex">
+                        <b-tab title="General">
+                            I'm the first fading tab
+                        </b-tab>
+                        <b-tab title="Edit profile">
+                            I'm the second tab
 
-            <b-card no-block>
-                <b-tabs small card ref="tabs" v-model="tabIndex">
-                    <b-tab title="General">
-                        I'm the first fading tab
-                    </b-tab>
-                    <b-tab title="Edit profile">
-                        I'm the second tab
+                        </b-tab>
+                    </b-tabs>
 
-                    </b-tab>
-                </b-tabs>
-
-            </b-card>
+                </b-card>
+            </div>
         </div>
     </template>
 <script src="scripts/script.js"></script>
